Fix Streamlit deploy: python 3.11 + headless opencv + timm

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.37.1
 torch>=2.1.0
 torchvision>=0.16.0
-opencv-python>=4.8.0
+timm
+opencv-python-headless
 numpy>=1.24.0
 Pillow>=10.0.0
 matplotlib>=3.7.0
